--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "inngest": "^3.30.0",
     "lucide-react": "^0.473.0",
     "next": "15.1.5",
-    "next-auth": "5.0.0-beta.25",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
