--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "WillLuke.nextjs.hasPrompted": true
+    "WillLuke.nextjs.hasPrompted": true,
+    "git.ignoreLimitWarning": true,
+    "cSpell.words": [
+        "langchain"
+    ]
 }
