--- a/package.json
+++ b/package.json
@@ -12,18 +12,24 @@
     "@arcjet/ip": "1.0.0-beta.1",
     "@arcjet/next": "1.0.0-beta.1",
     "@auth/prisma-adapter": "^2.7.4",
+    "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.10.0",
+    "@langchain/community": "^0.3.28",
+    "@langchain/core": "^0.3.37",
+    "@langchain/textsplitters": "^0.1.0",
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tiptap/extension-link": "^2.11.2",
@@ -35,11 +41,14 @@
     "@uploadthing/react": "^7.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.0.6",
     "inngest": "^3.30.0",
+    "langchain": "^0.3.15",
     "lucide-react": "^0.473.0",
     "next": "15.1.5",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
