Validating the ai agent resume form validation ✨✅

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "WillLuke.nextjs.hasPrompted": true,
     "git.ignoreLimitWarning": true,
     "cSpell.words": [
+        "cooldown",
         "langchain"
     ]
 }
