--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@langchain/community": "^0.3.28",
     "@langchain/core": "^0.3.37",
     "@langchain/textsplitters": "^0.1.0",
+    "@monaco-editor/react": "^4.6.0",
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slider": "^1.2.2",
@@ -38,17 +41,22 @@
     "@tiptap/pm": "^2.11.2",
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
+    "@types/pdfkit": "^0.13.9",
     "@uploadthing/react": "^7.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.6",
+    "html2canvas": "^1.4.1",
     "inngest": "^3.30.0",
+    "install": "^0.13.0",
+    "jspdf": "^2.5.2",
     "langchain": "^0.3.15",
     "lucide-react": "^0.473.0",
     "next": "15.1.5",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "pdf-parse": "^1.1.1",
+    "pdfkit": "^0.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
