--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@langchain/community": "^0.3.28",
     "@langchain/core": "^0.3.37",
+    "@langchain/google-genai": "^0.1.8",
     "@langchain/textsplitters": "^0.1.0",
     "@monaco-editor/react": "^4.6.0",
     "@prisma/client": "^6.2.1",
