--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
     "@types/pdfkit": "^0.13.9",
+    "@types/recharts": "^1.8.29",
     "@uploadthing/react": "^7.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -52,6 +53,7 @@
     "install": "^0.13.0",
     "jspdf": "^2.5.2",
     "langchain": "^0.3.15",
+    "limiter": "^3.0.0",
     "lucide-react": "^0.473.0",
     "next": "15.1.5",
     "next-auth": "^5.0.0-beta.25",
@@ -61,6 +63,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.1",
     "sonner": "^1.7.2",
     "stripe": "^17.5.0",
     "tailwind-merge": "^2.6.0",
