--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "job-marshal-finale-locale",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "tsx prisma/seed.ts"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@arcjet/ip": "1.0.0-beta.1",
@@ -43,13 +48,16 @@
     "@tiptap/pm": "^2.11.2",
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/pdfkit": "^0.13.9",
     "@types/recharts": "^1.8.29",
     "@uploadthing/react": "^7.1.5",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.6",
     "html2canvas": "^1.4.1",
+    "i": "^0.3.7",
     "inngest": "^3.30.0",
     "install": "^0.13.0",
     "jspdf": "^2.5.2",
@@ -76,7 +84,7 @@
     "@eslint/eslintrc": "^3",
     "@inngest/eslint-plugin": "^0.0.7",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^20",
+    "@types/node": "^22.13.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
@@ -84,6 +92,8 @@
     "postcss": "^8",
     "prisma": "^6.2.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3"
   }
 }
