--- a/package.json
+++ b/package.json
@@ -49,17 +49,21 @@
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsdom": "^21.1.7",
     "@types/pdfkit": "^0.13.9",
     "@types/recharts": "^1.8.29",
     "@uploadthing/react": "^7.1.5",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "data-fns": "^1.1.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.0.6",
     "html2canvas": "^1.4.1",
     "i": "^0.3.7",
     "inngest": "^3.30.0",
     "install": "^0.13.0",
+    "jsdom": "^26.0.0",
     "jspdf": "^2.5.2",
     "langchain": "^0.3.15",
     "limiter": "^3.0.0",
