--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "next": "15.1.5",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "node-fetch": "^3.3.2",
     "pdf-parse": "^1.1.1",
     "pdfkit": "^0.16.0",
     "react": "^19.0.0",
