--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
+    "scrapingbee": "^1.7.5",
     "sonner": "^1.7.2",
     "stripe": "^17.5.0",
     "tailwind-merge": "^2.6.0",
