--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@tanstack/react-query": "^5.66.0",
     "@tiptap/extension-link": "^2.11.2",
     "@tiptap/extension-text-align": "^2.11.2",
     "@tiptap/extension-typography": "^2.11.2",
