--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@arcjet/ip": "1.0.0-beta.1",
     "@arcjet/next": "1.0.0-beta.1",
     "@auth/prisma-adapter": "^2.7.4",
-    "@google/generative-ai": "^0.21.0",
+    "@google/generative-ai": "^0.1.3",
     "@hookform/resolvers": "^3.10.0",
     "@langchain/community": "^0.3.28",
     "@langchain/core": "^0.3.37",
@@ -59,6 +59,7 @@
     "clsx": "^2.1.1",
     "data-fns": "^1.1.0",
     "date-fns": "^4.1.0",
+    "force": "^0.0.3",
     "framer-motion": "^12.0.6",
     "html2canvas": "^1.4.1",
     "i": "^0.3.7",
