--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "cSpell.words": [
         "cooldown",
         "langchain"
-    ]
+    ],
+    "compile-hero.disable-compile-files-on-did-save-code": false
 }
