--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@langchain/google-genai": "^0.1.8",
     "@langchain/textsplitters": "^0.1.0",
     "@monaco-editor/react": "^4.6.0",
-    "@prisma/client": "^6.2.1",
+    "@prisma/client": "6.2.1",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.5",
@@ -69,7 +69,7 @@
     "jspdf": "^2.5.2",
     "langchain": "^0.3.15",
     "limiter": "^3.0.0",
-    "lucide-react": "^0.473.0",
+    "lucide-react": "^0.475.0",
     "next": "15.1.5",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
@@ -99,7 +99,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
     "postcss": "^8",
-    "prisma": "^6.2.1",
+    "prisma": "^6.3.1",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
