--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@arcjet/ip": "1.0.0-beta.1",
     "@arcjet/next": "1.0.0-beta.1",
     "@auth/prisma-adapter": "^2.7.4",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@google/generative-ai": "^0.1.3",
     "@hookform/resolvers": "^3.10.0",
     "@langchain/community": "^0.3.28",
@@ -86,6 +88,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.4.4",
+    "use-debounce": "^10.0.4",
     "uuid": "^11.0.5",
     "zod": "^3.24.1"
   },
