--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "pdf-parse": "^1.1.1",
     "pdfkit": "^0.16.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
