--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "scrapingbee": "^1.7.5",
     "sonner": "^1.7.2",
     "stripe": "^17.5.0",
+    "swr": "^2.3.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.4.4",
