--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@langchain/textsplitters": "^0.1.0",
     "@monaco-editor/react": "^4.6.0",
     "@prisma/client": "6.2.1",
+    "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.5",
