--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "limiter": "^3.0.0",
     "lucide-react": "^0.475.0",
     "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.4.7",
     "next": "15.1.5",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
