--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "postinstall": "prisma generate",
     "seed": "tsx prisma/seed.ts"
   },
   "prisma": {
@@ -27,7 +28,7 @@
     "@langchain/google-genai": "^0.1.8",
     "@langchain/textsplitters": "^0.1.0",
     "@monaco-editor/react": "^4.6.0",
-    "@prisma/client": "6.2.1",
+    "@prisma/client": "^6.4.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -117,7 +118,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
     "postcss": "^8",
-    "prisma": "^6.3.1",
+    "prisma": "^6.4.1",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
